solucionada la ruta del boton de inicio

--- a/views/Carátula.ejs
+++ b/views/Carátula.ejs
@@ -12,7 +12,7 @@
       <h2>"Las mejores series para vos"</h2>
       <h3>B I E N V E N I D O</h3>
       <div class="botones">
-        <a href="../../PAGINA 1/inicio.html" type="button" name="button" class="ingreso">INGRESAR</a>
+        <a href="/series/inicio" type="button" name="button" class="ingreso">INGRESAR</a>
 
         </a>
       </div>
