--- a/views/generos.ejs
+++ b/views/generos.ejs
@@ -17,7 +17,7 @@
     <nav class="barra-navegacion">
       <ul class="ul-logo">
         <li class="li-logo">
-          <a href="../PAGINA 1/inicio.html"><img src="/images/PAGINA2/LOGOMOVIFLY.png" alt="Movfy logo" class="logo"></a>
+          <a href="/series/inicio"><img src="/images/PAGINA2/LOGOMOVIFLY.png" alt="Movfy logo" class="logo"></a>
         </li>
       </ul>
     </nav>
@@ -25,23 +25,23 @@
     <button class="uk-button uk-button-default" id="menu-desplegable" type="button"> <span uk-icon="menu"></span> </button>
     <div uk-dropdown>
         <ul class="uk-nav uk-dropdown-nav">
-          <li class="li-menu"><a class="li-black" href="../PAGINA 1/inicio.html">Home</a></li>
-          <li class="li-menu"><a class="li-black" href="../PAGINA 2/generos.html"> Generos </a></li>
-          <li class="li-menu"><a class="li-black" href="../PAGINA 6/busc-avanzado.html">Buscador</a></li>
+          <li class="li-menu"><a class="li-black" href="/series/inicio">Home</a></li>
+          <li class="li-menu"><a class="li-black" href="/series/generos"> Generos </a></li>
+          <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
           <li class="li-menu"><a class="li-black" href="#flex2">Mi Cuenta</a></li>
         </ul>
     </div>
   </nav>
     <nav>
       <ul class="ul-menu">
-        <li class="li-menu"><a class="li-black" href="../PAGINA 1/inicio.html">Home</a></li>
-      <li class="li-menu"><a class="li-black" href="../PAGINA 2/generos.html">Géneros</a></li>
-        <li class="li-menu"><a class="li-black" href="../PAGINA 6/busc-avanzado.html">Buscador</a></li>
-          <li class="li-menu"><a class="li-black" href="../PAGINA 7/seriesFav.html">Favoritos</a></li>
+        <li class="li-menu"><a class="li-black" href="/series/inicio">Home</a></li>
+      <li class="li-menu"><a class="li-black" href="/series/generos">Géneros</a></li>
+        <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
+          <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
       </ul>
     </nav>
     <div class="elbuscador">
-      <form class="buscador" action="../PAGINA 4/buscado.html" method="get">
+      <form class="buscador" action="series/buscador" method="get">
         <input type="text" name="buscador" value="" class="buscador-simple texto">
         <input type=image src="/images/PAGINA2/buscador.png" width="17" name="" value="Buscar" class="boton">
       </form>
