--- a/views/Carátula.ejs
+++ b/views/Carátula.ejs
@@ -13,8 +13,7 @@
       <h3>B I E N V E N I D O</h3>
       <div class="botones">
         <a href="../../PAGINA 1/inicio.html" type="button" name="button" class="ingreso">INGRESAR</a>
-
-        </a>
+        <a href="../../PAGINA 1/inicio.html" type="button" name="button" class="ingreso">REGISTRARSE</a>
       </div>
     </div>
   </body>
