rutas de registro e ingreso

--- a/views/Carátula.ejs
+++ b/views/Carátula.ejs
@@ -12,8 +12,8 @@
       <h2>"Las mejores series para vos"</h2>
       <h3>B I E N V E N I D O</h3>
       <div class="botones">
-        <a href="../../series/inicio.html" type="button" name="button" class="ingreso">INGRESAR</a>
-        <a href="../../series/inicio.html" type="button" name="button" class="ingreso">REGISTRARSE</a>
+        <a href="/series/ingreso" type="button" name="button" class="ingreso">INGRESAR</a>
+        <a href="/series/registro" type="button" name="button" class="ingreso">REGISTRARSE</a>
       </div>
     </div>
   </body>
