--- a/views/ingreso.ejs
+++ b/views/ingreso.ejs
@@ -24,7 +24,7 @@
 
         </form>     
          <div class="botones">
-        <a href="../../PAGINA 1/inicio.html" type="button" name="button" class="ingreso">INGRESAR</a>
+        <a href="/series/inicio" type="button" name="button" class="ingreso">INGRESAR</a>
       </div>
     </div>
   </body>
