--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -28,7 +28,7 @@
 
         </form>     
          <div class="botones">
-        <a href="../../PAGINA 1/inicio.html" type="button" name="button" class="ingreso">REGISTRARSE</a>
+        <a href="/series/inicio" type="button" name="button" class="ingreso">REGISTRARSE</a>
       </div>
     </div>
   </body>
