--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+  <p>CONSULTA DB <%= listaSeries.nombre_usuario %> </p>
   <div class="alert alert-light" uk-alert role="alert">
     ¡MÍNIMO 3 CARACTERES!
   </div>
