creacion seccion "mis resenias"

--- a/views/generos.ejs
+++ b/views/generos.ejs
@@ -38,6 +38,7 @@
       <li class="li-menu"><a class="li-black" href="/series/generos">Géneros</a></li>
         <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
           <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
+          <li class="li-menu"><a class="li-black" href="/series/reseñas">Mis Reseñas</a></li>
       </ul>
     </nav>
     <div class="elbuscador">
