--- a/views/ingreso.ejs
+++ b/views/ingreso.ejs
@@ -11,13 +11,13 @@
      <img src="/images/PAGINA0/LOGOMOVIFLY.png" alt="" class="logo_ingreso">
     <!--  <h2>"Las mejores series para vos"</h2>
       <h3>B I E N V E N I D O</h3> -->
-      <form action="/movies/store" method="POST">
+      <form action="/series/guardar" method="POST">
         <label class = "textos">Nombre de usuario / Email:</label>
-        <input class = "input_ingreso" type="email" name="title">
+        <input class = "input_ingreso" type="email" name="nombre">
         <br>
 
         <label class="textos">Contraseña:</label>
-        <input class = "input_ingreso" type="password" name="rating">
+        <input class = "input_ingreso" type="password" name="contra">
         <br>
 
     </form>
