--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -9,8 +9,11 @@
   <body>
     <div class="contenedor">
      <img src="/images/PAGINA0/LOGOMOVIFLY.png" alt="" class="logo_ingreso">
-    <!--  <h2>"Las mejores series para vos"</h2>
-      <h3>B I E N V E N I D O</h3> -->
+    
+     <!-- El formulario para la registración  -->
+
+     <!-- En los "name" del input poner siempre el nombre de las columnos del DB para ordenarnos mejor -->
+
       <form action="/series/guardar" method="POST">
         <label class = "text_regis">Nombre del usuario:</label>
         <input class = "input_ingreso" type="text" name="nombre_usuario">
@@ -37,9 +40,6 @@
     </form>
 
         </form>     
-       <!--  <div class="botones">
-        <a href="/series/inicio" type="submit" name="button" class="ingreso">REGISTRARSE</a>
-      </div> -->
     </div>
   </body>
 </html>
