--- a/views/buscado.ejs
+++ b/views/buscado.ejs
@@ -37,10 +37,11 @@
       <nav>
         <ul class="ul-menu">
           <li class="li-menu"><a class="li-black" href="/series/inicio">Home</a></li>
-        <li class="li-menu"><a class="li-black" href="series/generos">Géneros</a></li>
+        <li class="li-menu"><a class="li-black" href="/series/generos">Géneros</a></li>
           <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
             <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
-            <li class="li-menu"><a class="li-black" href="/series/reseñas">Mis Reseñas</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/usuarios">Usuarios</a></li>
         </ul>
       </nav>
       <div class="elbuscador">
