--- a/views/generos.ejs
+++ b/views/generos.ejs
@@ -38,11 +38,12 @@
       <li class="li-menu"><a class="li-black" href="/series/generos">Géneros</a></li>
         <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
           <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
-          <li class="li-menu"><a class="li-black" href="/series/reseñas">Mis Reseñas</a></li>
+          <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
+          <li class="li-menu"><a class="li-black" href="/series/usuarios">Usuarios</a></li>
       </ul>
     </nav>
     <div class="elbuscador">
-      <form class="buscador" action="series/buscador" method="get">
+      <form class="buscador" action="/series/buscador" method="get">
         <input type="text" name="buscador" value="" class="buscador-simple texto">
         <input type=image src="/images/PAGINA2/buscador.png" width="17" name="" value="Buscar" class="boton">
       </form>
