--- a/views/busc-avanzado.ejs
+++ b/views/busc-avanzado.ejs
@@ -39,14 +39,15 @@
           <li class="li-menu"><a class="li-black" href="/series/inicio">Home</a></li>
         <li class="li-menu"><a class="li-black" href="/series/generos">Géneros</a></li>
           <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
-            <li class="li-menu"><a class="li-black" href="series/favoritos">Favoritos</a></li>
-            <li class="li-menu"><a class="li-black" href="/series/reseñas">Mis Reseñas</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/usuarios">Usuarios</a></li>
         </ul>
       </nav>
       <div class="elbuscador">
-        <form class="buscador" action="../PAGINA 4/buscado.html" method="get">
+        <form class="buscador" action="/series/buscador" method="get">
             <input type="text" name="buscador" value="" class="buscador-simple texto">
-            <input type=image src="buscador.png" width="17" name="" value="Buscar" class="boton">
+            <input type=image src="/images/PAGINA6/buscador.png" width="17" name="" value="Buscar" class="boton">
         </form>
       </div>
     </header>
@@ -58,7 +59,7 @@
             <img src="/images/PAGINA6/busca-pop.png" alt="popcorn">
             <p>BUSCADOR AVANZADO</p>
           </div>
-          <form class="busc" action="busc-avanzado.html" method="GET">
+          <form class="busc" action="/series/busc-avanzado" method="GET">
             <div class="avanzaso">
               <label for="name" class="buscar">
             GÉNERO QUE DESEA BUSCAR
