--- a/views/resenas.ejs
+++ b/views/resenas.ejs
@@ -40,7 +40,8 @@
         <li class="li-menu"><a class="li-black" href="/series/generos">Géneros</a></li>
           <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
             <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
-            <li class="li-menu"><a class="li-black" href="/series/reseñas">Mis Reseñas</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/usuarios">Usuarios</a></li>
         </ul>
       </nav>
       <div class="elbuscador">
@@ -59,7 +60,7 @@
 
     <h1>Mis reseñas</h1>
 
-    <ul class="listado-favoritas">
+    <ul class="resenas">
 
     </ul>
 
