--- a/views/seriesFav.ejs
+++ b/views/seriesFav.ejs
@@ -40,11 +40,12 @@
         <li class="li-menu"><a class="li-black" href="/series/generos">Géneros</a></li>
           <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
             <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
-            <li class="li-menu"><a class="li-black" href="/series/reseñas">Mis Reseñas</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/usuarios">Usuarios</a></li>
         </ul>
       </nav>
       <div class="elbuscador">
-        <form class="buscador" action="../PAGINA 4/buscado.html" method="get">
+        <form class="buscador" action="/series/buscador" method="get">
             <input type="text" name="buscador" value="" class="buscador-simple texto">
             <input type=image src="/images/PAGINA7/buscador.png" width="17" name="" value="Buscar" class="boton">
         </form>
