--- a/public/stylesheets/pagina6.css
+++ b/public/stylesheets/pagina6.css
@@ -443,3 +443,42 @@ border: solid 10px #F7C004;
 }
 
 }
+
+
+
+/* PROGRAMACION II - PAGINA 9: BUSCADOR DE USUARIOS*/
+
+section.busc-usuarios{
+background-color: currentcolor;
+}
+
+div.busc-usuarios{
+  text-align: center;
+}
+ 
+div.busc-usuarios form{
+background: goldenrod;
+font-size: 2em;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+div.busc-usuarios form input.users{
+  background-color: rgba(0,0,0,0);
+  border: none;
+  border-bottom: 1px solid black;
+  height: 2.2em;
+  width: 25%;
+  color: white;
+  font-size: 21px;
+  font-family: PT Sans Narrow;
+  text-align: center;
+}
+
+.busc-user{
+  width: 2.3%;
+  height: 0%;
+  padding-top: 0.5%;
+}
