--- a/views/descripcion.ejs
+++ b/views/descripcion.ejs
@@ -39,6 +39,7 @@
           <li class="li-menu"><a class="li-black" href="/series/sc-avanzado">Buscador</a></li>
             <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
             <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/busc-usuarios">Usuarios</a></li>
         </ul>
       </nav>
       <div class="elbuscador">
