--- a/views/generos.ejs
+++ b/views/generos.ejs
@@ -39,7 +39,7 @@
         <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
           <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
           <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
-          <li class="li-menu"><a class="li-black" href="/series/usuarios">Usuarios</a></li>
+          <li class="li-menu"><a class="li-black" href="/series/busc-usuarios">Usuarios</a></li>
       </ul>
     </nav>
     <div class="elbuscador">
