--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -41,7 +41,7 @@
           <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
             <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
             <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
-            <li class="li-menu"><a class="li-black" href="/series/busc-usuarios">Usuarios</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/usuarios">Usuarios</a></li>
         </ul>
       </nav>
       <div class="elbuscador">
@@ -52,55 +52,28 @@
       </div>
     </header>
 
-    <section class="busc-avanzado2">
-      <div class="busc-avanzado">
+    <!------------------------------------- PROGRAMACION II ------------------------------------->
+
+
+    <section class="busc-usuarios">
+      <div class="busc-usuarios">
 
           <div class="titulo">
-            <img src="/images/PAGINA6/busca-pop.png" alt="popcorn">
-            <p>BUSCADOR AVANZADO</p>
+            <p>BUSCADOR DE USUARIOS</p>
           </div>
-          <form class="busc" action="/series/busc-avanzado" method="GET">
-            <div class="avanzaso">
-              <label for="name" class="buscar">
-            GÉNERO QUE DESEA BUSCAR
-                  <select id="selectGenre" class="buscarCampo" name="buscados" >
-                    <option value=""></option>
-                  </select>
-                </label>
-                <label for="name" class="excluir">
-                  GÉNERO QUE DESEA EXCLUIR
-                  <select class="excluir" name="excluirCampo" id="excludeGenre" >
-                    <option value=""></option>
-                  </select>
-                </label>
-                <label for="name" class="orden">
-                  ÓRDEN DE LOS RESULTADOS
-                  <select class="orden" name="ordenCampo" value="">
-                    <option value=""></option>
-                    <option value="vote_average.desc">Puntuación descendente</option>
-                    <option value="vote_average.asc">Puntuación ascendente </option>
-                    <option value="first_air_date.desc">Fecha de estreno descendente</option>
-                    <option value="first_air_date.asc">Fecha de estreno ascendente</option>
-                    <option value="popularity.desc">Popularidad descendente</option>
-                    <option value="popularity.asc">Popularidad ascendente</option>
-                  </select>
-                </label>
-                <label for="name" class="año">
-                  AÑO DE ESTRENO
-                  <input type="number" min="1900" max="2020"  class="year" name="yearCampo" id="year" value="">
-
-                </input>
-                </label>
-              </label>
-              <button type="submit" name="button" id="busquedafinal">S E A R C H</button>
-            </div>
+          <form class="busc" action="/series/busc-usuario" method="GET">
+              <label for="">EMAIL / NOMBRE DE USUARIO</label>
+              <br>
+              <input class = "users" type="text" name="nombre_usuario" value="">
+              <input type=image src="/images/PAGINA6/usuario.png" width="17" name="" value="Buscar" class="busc-user">
+              
           </form>
 
         </div>
 
     </section>
 
-
+<!----------------------------------------------------------------------------------------------->
 
     <section class="resultado">
 
