Validación de user y pass en /ingreso con errores

--- a/views/ingreso.ejs
+++ b/views/ingreso.ejs
@@ -13,11 +13,11 @@
       <h3>B I E N V E N I D O</h3> -->
       <form action="/series/verificar" method="POST">
         <label class = "textos">Email del usuario:</label>
-        <input class = "input_ingreso" type="email" name="email">
+        <input class = "input_ingreso" type="email" name="email" required>
         <br>
 
         <label class="textos">Contraseña:</label>
-        <input class = "input_ingreso" type="password" name="contraseña">
+        <input class = "input_ingreso" type="password" name="contraseña" required>
         <br>
 
         <button type="submit" class="ingreso">INGRESAR</button>
