--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -16,23 +16,23 @@
 
       <form action="/series/guardar" method="POST">
         <label class = "text_regis">Nombre del usuario:</label>
-        <input class = "input_ingreso" type="text" name="nombre_usuario">
+        <input class = "input_ingreso" type="text" name="nombre_usuario" required>
         <br>
 
         <label class = "text_regis">Apellido del usuario:</label>
-        <input class = "input_ingreso" type="text" name="apellido_usuario">
+        <input class = "input_ingreso" type="text" name="apellido_usuario" required>
         <br>
 
         <label class = "text_regis">Email:</label>
-        <input class = "input_ingreso" type="email" name="email">
+        <input class = "input_ingreso" type="email" name="email" required>
         <br>
 
         <label class="text_regis">Contraseña:</label>
-        <input class = "input_ingreso" type="password" name="contraseña">
+        <input class = "input_ingreso" type="password" name="contraseña" required>
         <br>
 
         <label class="text_regis">Fecha de nacimiento:</label>
-        <input class = "input_ingreso" type="date" name="fecha_nacimiento">
+        <input class = "input_ingreso" type="date" name="fecha_nacimiento" required>
         <br>
 
         <button type="submit" class="ingreso">REGISTRARSE</button>
