Arreglo de errores / Intento de LOGIN

--- a/public/stylesheets/pagina5.css
+++ b/public/stylesheets/pagina5.css
@@ -338,7 +338,11 @@ align-items: center;
   background: #252827;;
 }
 
+#close{
+  display: flex;
+  justify-content: flex-end;
 
+}
 /* -------- FOOTER --------- */
 
 
