Arreglo de LOGIN parte 1000

--- a/views/descripcion.ejs
+++ b/views/descripcion.ejs
@@ -112,7 +112,7 @@
               <div>
                   <label for="" class="no_hover" >Email del usuario:</label>
                   <br>
-                  <input type="email" name="nombre_usuario" required>
+                  <input type="email" name="email" required>
               </div>
               <div>
                   <label for="" class="no_hover">Contraseña:</label>
@@ -122,7 +122,7 @@
               <div>
                   <label for="" class="no_hover">Comentario:</label>
                   <br>
-                  <textarea rows="10" cols="40" name="texto_reseña" value="Write something here" required></textarea>
+                  <textarea rows="10" cols="40" name="texto_resena" value="Write something here" required></textarea>
               </div>
               <div>
                   <label for="" class="no_hover">Score:</label>
