agregue el input hidden en la vista del form resenias

--- a/views/descripcion.ejs
+++ b/views/descripcion.ejs
@@ -109,6 +109,7 @@
             <!-- -------- // Aca codigo de formulario con el for -------- -->
 
             <form action="/series/guardado_resena" method="POST">
+            <input type="hidden" name="id_serie" value="<%=id_serie%>">
               <div>
                   <label for="" class="no_hover" >Email del usuario:</label>
                   <br>
