--- a/views/descripcion.ejs
+++ b/views/descripcion.ejs
@@ -89,6 +89,8 @@
   
       <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
           <!-- // Aca codigo de reseñas con el for -->
+         <!-- <%form action=""></form>-->
+          <!------------------------------------------>
       </ul>
       <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
      <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
