--- a/views/descripcion.ejs
+++ b/views/descripcion.ejs
@@ -39,7 +39,7 @@
           <li class="li-menu"><a class="li-black" href="/series/sc-avanzado">Buscador</a></li>
             <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
             <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
-            <li class="li-menu"><a class="li-black" href="/series/busc-usuarios">Usuarios</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/buscUser">Usuarios</a></li>
         </ul>
       </nav>
       <div class="elbuscador">
@@ -89,31 +89,15 @@
   
       <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
           <!-- // Aca codigo de reseñas con el for -->
-            <h1>
-                Nombre de usuario: <%=id_usuario%>
-            </h1>
-            <p>
-                Rating: <%=unaPelicula.rating%>
-            </p>
-            <p>
-                Fecha de estreno: <%=unaPelicula.release_date%>
-            </p>
-            <% if (unaPelicula.length != null) { %>
-                <p>
-                    Duración: <%=unaPelicula.length%>
-                </p>
-            <% } %>
-            <p>
-                Género: <%=unaPelicula.genero.name%>
-            </p>
-            <p>Actuaciones</p>
-            <ul>
-                <% for (let i = 0; i < unaPelicula.actuaciones.length; i++) { %>
-                    <li>
-                        <%=unaPelicula.actuaciones[i].first_name%> <%=unaPelicula.actuaciones[i].last_name%>
-                    </li>
-                <% } %>
-            </ul>
+
+             <% for (let i = 0; i < unUser.resenas.length; i++) { %>
+                <li>
+                  <%= unUser.resenas[i].texto_resena %>
+                </li>
+
+             <% } %>
+
+            
 
           <!------------------------------------------>
       </ul>
