--- a/views/lista-generos.ejs
+++ b/views/lista-generos.ejs
@@ -42,7 +42,7 @@
           <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
             <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
             <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
-            <li class="li-menu"><a class="li-black" href="/series/busc-usuarios">Usuarios</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/buscUser">Usuarios</a></li>
         </ul>
       </nav>
       <div class="elbuscador">
