--- a/views/descripcion.ejs
+++ b/views/descripcion.ejs
@@ -69,7 +69,7 @@
       <button type="button" name="button" uk-icon="heart" id="favoritos"> Agregar a favoritos </button>
   
   
-<!-- PROGRAMACION II ------------------------------------------------------------------------------------------------------- --> 
+<!-- -------------------------------------- PROGRAMACION II --------------------------------------------------------- --> 
 
         <!-- Armado de las reseñas -->
 
@@ -90,12 +90,7 @@
       <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
           <!-- // Aca codigo de reseñas con el for -->
 
-             <% for (let i = 0; i < unUser.resenas.length; i++) { %>
-                <li>
-                  <%= unUser.resenas[i].texto_resena %>
-                </li>
-
-             <% } %>
+       
 
             
 
