--- a/views/detalle_user.ejs
+++ b/views/detalle_user.ejs
@@ -69,7 +69,7 @@
         <ul>
           <% for (let i = 0; i < unUser.resenas.length; i++) { %>
               <li>
-                <%=unUser.resenas[i].texto_resena%> 
+                <%=unUser.resenas[i].texto_resena%> <br>Score: <%=unUser.resenas[i].puntaje_serie%> 
               </li>
           <% } %>
       </ul>
