--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -78,7 +78,7 @@
 
         <% for (let i = 0; i < usuarios.length; i++) { %>
             <li>
-              <a href="/series/<%=usuarios[i].id_usuario%>"> 
+              <a href="/series/detalle/<%=usuarios[i].id_usuario%>"> 
                 <%=usuarios[i].nombre_usuario%> <%=usuarios[i].apellido_usuario%>: <%=usuarios[i].email%> 
               </a>
             </li>
