--- a/views/descripcion.ejs
+++ b/views/descripcion.ejs
@@ -38,7 +38,7 @@
         <li class="li-menu"><a class="li-black" href="/series/generos">Géneros</a></li>
           <li class="li-menu"><a class="li-black" href="/series/sc-avanzado">Buscador</a></li>
             <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
-            <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/login">Mis Reseñas</a></li>
             <li class="li-menu"><a class="li-black" href="/series/buscUser">Usuarios</a></li>
         </ul>
       </nav>
@@ -75,7 +75,7 @@
 
   <br>
   <br>
-    <a class="uk-button uk-button-default" href="#modal-center2" uk-toggle>Ver Reseñas</a>
+    <a class="uk-button uk-button-default" href="#modal-center2" uk-toggle href="/series/listado">Ver Reseñas</a>
         
         <!-- Insertar Reseñas -->
     <a class="uk-button uk-button-default" href="#modal-center3" uk-toggle>Agregar Reseña</a>
@@ -87,10 +87,9 @@
       <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical" id="modal-reco" >
         <div "uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider class="img-reco">
   
-      <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
+      <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m" >
           <!-- // Aca codigo de reseñas con el for -->
 
-       
 
             
 
@@ -181,6 +180,8 @@
 </div>
 
     </section>
+
+  
 
 
 
