--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -40,7 +40,7 @@
         <li class="li-menu"><a class="li-black" href="/series/generos">Géneros</a></li>
           <li class="li-menu"><a class="li-black" href="/series/busc-avanzado">Buscador</a></li>
             <li class="li-menu"><a class="li-black" href="/series/favoritos">Favoritos</a></li>
-            <li class="li-menu"><a class="li-black" href="/series/resenas">Mis Reseñas</a></li>
+            <li class="li-menu"><a class="li-black" href="/series/login">Mis Reseñas</a></li>
             <li class="li-menu"><a class="li-black" href="/series/buscUser">Usuarios</a></li>
         </ul>
       </nav>
@@ -76,7 +76,7 @@
     
     <section class="usuarios">
 
-        <% for (let i = 0; i < usuarios.length; i++) { %>
+      <% for (let i = 0; i < usuarios.length; i++) { %>
             <li>
               <a href="/series/detalle/<%=usuarios[i].id_usuario%>"> 
                 <%=usuarios[i].nombre_usuario%> <%=usuarios[i].apellido_usuario%>: <%=usuarios[i].email%> 
