--- a/views/borrarSerie.ejs
+++ b/views/borrarSerie.ejs
@@ -51,8 +51,8 @@
     </header>
     <div class="foto">
     <div class="contenedor">
-      <h3>LOGIN</h3>
-      <form action="/series/validar/" method="POST">
+      <h3>Delete Reseña</h3>
+      <form action="/series/resenas/delete/<%=borrar.id_resena%>" method="POST">
         <label class = "textos">Email del usuario:</label>
         <input class = "input_ingreso" type="email" name="email" required>
         <br>
@@ -61,7 +61,10 @@
         <input class = "input_ingreso" type="password" name="contraseña" required>
         <br>
 
-        <button type="submit" class="ingreso">Ingresar</button>   
+
+        <button type="submit" class="ingreso">CONFIRMAR</button>
+
+        </div>   
     </div>
   </div>
     <footer>
