--- a/views/editarSerie.ejs
+++ b/views/editarSerie.ejs
@@ -51,8 +51,8 @@
     </header>
     <div class="foto">
     <div class="contenedor">
-      <h3>LOGIN</h3>
-      <form action="/series/validar/" method="POST">
+      <h3>Editar Reseña</h3>
+      <form action="/series/resenas/<%=editar.id_resena%>" method="POST">
         <label class = "textos">Email del usuario:</label>
         <input class = "input_ingreso" type="email" name="email" required>
         <br>
@@ -61,7 +61,23 @@
         <input class = "input_ingreso" type="password" name="contraseña" required>
         <br>
 
-        <button type="submit" class="ingreso">Ingresar</button>   
+        <label class="textos">Comentario:</label>
+        <input class = "input_ingreso" type="text" name="texto_resena" required value="<%=editar.texto_resena%>">
+        <br>
+
+        <div class="score">
+            <label for="" class="no_hover">Score:</label>
+              <!---<fieldset class="uk-fieldset">-->
+            <div class="uk-margin">
+                      <input class="uk-range" type="range" value="<%=editar.puntaje_serie%>" min="0" max="10" step="1" name="puntaje_serie">
+                  </div>
+              <!--</fieldset>-->
+            
+        </div>
+
+
+
+        <button type="submit" class="ingreso">EDITAR RESEÑA</button>   
     </div>
   </div>
     <footer>
