--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -61,7 +61,7 @@
           <div class="titulo">
             <p>BUSCADOR DE USUARIOS</p>
           </div>
-          <form class="busc" action="/series/buscUser/" method="GET">
+          <form class="busc" action="/series/buscUser" method="GET">
               <label for="">EMAIL / NOMBRE DE USUARIO</label>
               <br>
               <input class = "users" type="text" name="email" value="" required>
